--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section id="presentation">
         <img src="assets/avatar.png" alt="me" />
-        <h1>Hi! I'm Jérémie 👋</h1>
+        <h1>Hi! I'm Jérémie <span>👋</span></h1>
         <p>
             I'm french developer / designer living in Paris.<br>
             I like new projects, making experiments, games, and learning new stuff!
@@ -37,7 +37,7 @@
                 <img src="assets/project-jsjourney.png" />
                 <h3>JS Journey</h3>
                 <h4>Creator</h4>
-                <p>JS Journey is a side project I’m making on my free time. This is a website to learn programming via Javascript from scratch. The idea is to make a fun and progressive way to learn various concepts and best practices!</p>
+                <p>JS Journey is a side project I'm making on my free time. This is a website to learn programming via Javascript from scratch. The idea is to make a fun and progressive way to learn various concepts and best practices!</p>
                 <a target="_blank" href="https://js-journey.vercel.app/">Open the project</a>
             </div>
             <div class="project">
