Replace animated background to fix scrollbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
     <section id="presentation">
         <img src="assets/avatar.png" alt="me" />
         <h1>Hi! I'm Jérémie <span>👋</span></h1>
@@ -53,7 +56,7 @@
                 <p>Bastoon is a deck-building cards game from 2 to 4 players. Players are placed on a board and some cards are constrained by there range and the players positions.</p>
             </div>
         </div>
-        <a href="#" class="btn">Back to top</a>
+        <a href="#presentation" class="btn">Back to top</a>
     </section>
 </body>
 </html>
