Update frog description

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="assets/project-frog.png" />
                 <h3>Frog</h3>
                 <h4>Game dev / Game design / Godot</h4>
-                <p>Bastoon is a deck-building cards game from 2 to 4 players. Players are placed on a board and some cards are constrained by there range and the players positions.</p>
+                <p>Frog is a 2d platforming multiplayer game. We are currently developing the game using Godot game engine.</p>
             </div>
         </div>
         <a href="#presentation" class="btn">Back to top</a>
