New design + remove projects

--- a/index.html
+++ b/index.html
@@ -8,55 +8,19 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="bg"></div>
-    <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
-    <section id="presentation">
+    <main>
         <img src="assets/avatar.png" alt="me" />
-        <h1>Hi! I'm Jérémie <span>👋</span></h1>
-        <p>
+        <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
+        <h2>
             I'm french developer / designer living in Paris.<br>
             I like new projects, making experiments, games, and learning new stuff!
-        </p>
-        <a href="#projects" class="btn">View my projects</a>
-        <div id="contact">
+        </h2>
+        <footer>
             <a target="_blank" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
             <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
             <a target="_blank" title="Instagram" href="https://www.instagram.com/jeremtab"><img src="assets/instagram.svg" /></a>
             <a target="_blank" title="Resume" href="/assets/resume.pdf"><img src="assets/resume.svg" /></a>
-        </div>
-    </section>
-    <section id="projects">
-        <h2>Projects I've worked on lately...</h2>
-        <div id="grid">
-            <div class="project">
-                <img src="assets/project-voltapp.png" />
-                <h3>Voltapp</h3>
-                <h4>UX / Dev / R&D</h4>
-                <p>Voltapp is a tool that allows people to create apps and websites without coding. I'm mostly working on the design & UX of the project as well as some engine core features and R&D development.</p>
-                <a target="_blank" href="https://www.voltapp.tech/">Open the project</a>
-            </div>
-            <div class="project">
-                <img src="assets/project-jsjourney.png" />
-                <h3>JS Journey</h3>
-                <h4>Creator</h4>
-                <p>JS Journey is a side project I'm making on my free time. This is a website to learn programming via Javascript from scratch. The idea is to make a fun and progressive way to learn various concepts and best practices!</p>
-                <a target="_blank" href="https://js-journey.vercel.app/">Open the project</a>
-            </div>
-            <div class="project">
-                <img src="assets/project-bastoon.png" />
-                <h3>Bastoon</h3>
-                <h4>Creator</h4>
-                <p>Bastoon is a deck-building cards game from 2 to 4 players. Players are placed on a board and some cards are constrained by there range and the players positions.</p>
-            </div>
-            <div class="project">
-                <img src="assets/project-frog.png" />
-                <h3>Frog</h3>
-                <h4>Game dev / Game design / Godot</h4>
-                <p>Frog is a 2d platforming multiplayer game. We are currently developing the game using Godot game engine.</p>
-            </div>
-        </div>
-        <a href="#presentation" class="btn">Back to top</a>
-    </section>
+        </footer>
+    </main>
 </body>
 </html>
