Fixed wording + css

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <img src="assets/avatar.png" alt="me" />
         <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
         <h2>
-            I'm french developer / designer living in Paris.<br>
-            I like new projects, making experiments, games, and learning new stuff!
+            Just a random guy in Paris who writes code sometimes<br>
+            and start new side projects every now and then
         </h2>
-        <footer>
-            <a target="_blank" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
-            <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
-            <a target="_blank" title="Instagram" href="https://www.instagram.com/jeremtab"><img src="assets/instagram.svg" /></a>
-            <a target="_blank" title="Resume" href="/assets/resume.pdf"><img src="assets/resume.svg" /></a>
-        </footer>
     </main>
+    <footer>
+        <a target="_blank" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
+        <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
+        <a target="_blank" title="Instagram" href="https://www.instagram.com/jeremtab"><img src="assets/instagram.svg" /></a>
+        <a target="_blank" title="Resume" href="/assets/resume.pdf"><img src="assets/resume.svg" /></a>
+    </footer>
 </body>
 </html>
