--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <main>
+    <main id="intro">
         <img src="assets/avatar.png" alt="me" />
         <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
         <h2>
             Just a random guy in Paris who writes code sometimes<br>
             and start new side projects every now and then
         </h2>
+        <a href="#slides">More stuffs 👇</a>
     </main>
+    <section id="slides">
+        <h2>Slides for workshops ✨</h2>
+        <h3>Theses slides are not meant to be used on there own but more as a support for teaching the associated concepts, also they are in french, sorry...</h3>
+        <div class="grid">
+            <a title="Intro to VSCode" href="https://jeremt.github.io/intro-to-vscode" target="_blank">
+                <img src="assets/slides-vscode.png" alt="Intro to VSCode">
+            </a>
+            <a title="Intro to GIT" href="https://jeremt.github.io/intro-to-git" target="_blank">
+                <img src="assets/slides-git.png" alt="Intro to GIT">
+            </a>
+            <a title="Intro to async" href="https://jeremt.github.io/intro-to-async" target="_blank">
+                <img src="assets/slides-async.png" alt="Intro to async">
+            </a>
+            <a title="Intro to React" href="https://jeremt.github.io/intro-to-react" target="_blank">
+                <img src="assets/slides-react.png" alt="Intro to React">
+            </a>
+        </div>
+        <a href="#intro">Back to top 👆</a>
+    </section>
     <footer>
         <a target="_blank" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
         <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
