Added debug slides

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a title="Intro to React" href="https://jeremt.github.io/intro-to-react" target="_blank">
                 <img src="assets/slides-react.png" alt="Intro to React">
             </a>
+            <a title="Intro to Debug" href="https://jeremt.github.io/intro-to-debug" target="_blank">
+                <img src="assets/slides-debugger.png" alt="Intro to Debug">
+            </a>
         </div>
         <a href="#intro">Back to top 👆</a>
     </section>
