Added slides for TS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#slides">More stuffs 👇</a>
     </main>
     <section id="slides">
-        <h2>Slides for workshops ✨</h2>
+        <h2>Slides for workshops</h2>
         <h3>Theses slides are not meant to be used on there own but more as a support for teaching the associated concepts, also they are in french, sorry...</h3>
         <div class="grid">
             <a title="Intro to VSCode" href="https://jeremt.github.io/intro-to-vscode" target="_blank">
@@ -35,6 +35,9 @@
             </a>
             <a title="Intro to Debug" href="https://jeremt.github.io/intro-to-debug" target="_blank">
                 <img src="assets/slides-debugger.png" alt="Intro to Debug">
+            </a>
+            <a title="Intro to TypeScript" href="https://jeremt.github.io/intro-to-ts" target="_blank">
+                <img src="assets/slides-ts.png" alt="Intro to TypeScript">
             </a>
         </div>
         <a href="#intro">Back to top 👆</a>
