--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <main id="intro">
         <img src="assets/avatar.png" alt="me" />
         <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
-        <h2>
+        <p>
             Just a random guy in Paris who writes code sometimes<br>
             and start new side projects every now and then
-        </h2>
+        </p>
         <a href="#slides">More stuffs 👇</a>
     </main>
     <section id="slides">
         <h2>Slides for workshops</h2>
-        <h3>Theses slides are not meant to be used on there own but more as a support for teaching the associated concepts, also they are in french, sorry...</h3>
+        <p>Theses slides are not meant to be used on there own but more as a support for teaching the associated concepts, also they are in french, sorry...</p>
         <div class="grid">
             <a title="Intro to VSCode" href="https://jeremt.github.io/intro-to-vscode" target="_blank">
                 <img src="assets/slides-vscode.png" alt="Intro to VSCode">
