--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <a href="#intro">Back to top 👆</a>
     </section>
     <footer>
-        <a target="_blank" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
-        <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
-        <a target="_blank" title="Instagram" href="https://www.instagram.com/jeremtab"><img src="assets/instagram.svg" /></a>
-        <a target="_blank" title="Resume" href="/assets/resume.pdf"><img src="assets/resume.svg" /></a>
+        <a target="_blank" style="--footer-index: 0" title="Github" href="https://github.com/jeremt"><img src="assets/github.svg" /></a>
+        <a target="_blank" style="--footer-index: 1" title="LinkedIn" href="https://www.linkedin.com/in/jeremie-taboada-16495959/"><img src="assets/linkedin.svg" /></a>
+        <a target="_blank" style="--footer-index: 2" title="Instagram" href="https://www.instagram.com/jeremtab"><img src="assets/instagram.svg" /></a>
+        <a target="_blank" style="--footer-index: 3" title="Resume" href="/assets/resume.pdf"><img src="assets/resume.svg" /></a>
     </footer>
 </body>
 </html>
