--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a title="Intro to TypeScript" href="https://jeremt.github.io/intro-to-ts" target="_blank">
                 <img src="assets/slides-ts.png" alt="Intro to TypeScript">
             </a>
+            <a title="Intro to POO" href="https://jeremt.github.io/intro-to-poo" target="_blank">
+                <img src="assets/slides-poo.png" alt="Intro to POO">
+            </a>
         </div>
         <a href="#intro">Back to top 👆</a>
     </section>
