--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main id="intro">
-        <img src="assets/avatar.png" alt="me" />
+        <img src="assets/avatar.jpg" alt="me" />
         <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
         <p>
             Just a random guy in Paris who writes code sometimes<br>
