--- a/index.html
+++ b/index.html
@@ -16,13 +16,36 @@
                 Just a random guy in Paris who writes code sometimes<br />
                 and start new side projects every now and then.
             </p>
-            <a href="#slides" class="linkBtn">More stuff 👇</a>
+            <a href="#projects" class="linkBtn">More stuff 👇</a>
         </main>
+        <section id="projects">
+            <h2>What do I do?</h2>
+            <p>The main projects I'm currently working on these days</p>
+            <div class="grid">
+                <div class="project">
+                    <a href="https://voltapp.tech" target="_blank"><img src="./assets/voltapp.png" alt="" /></a>
+                    <p>
+                        Voltapp is a no-code tool to create web apps using a graph based visual coding. This is my main
+                        project as a Co-founder of Celestory company.
+                    </p>
+                </div>
+                <div class="project">
+                    <a href="https://codepassport.dev" target="_blank"
+                        ><img src="./assets/codepassport.png" alt=""
+                    /></a>
+                    <p>
+                        Code Passport is an interactive website to learn code (JS, HTML & CSS). I'm developping it on my
+                        spare time with my friend
+                        <a href="https://www.instagram.com/vi_pariscandance/" target="_blank">Vi</a>.
+                    </p>
+                </div>
+            </div>
+        </section>
         <section id="slides">
             <h2>Slides for workshops</h2>
             <p>
-                Theses slides are not meant to be used on their own but more as a support for teaching the associated
-                concepts, also they are only in french, sorry...
+                Theses slides are meant to be used as a support for teaching the associated concepts, also it's in
+                french, sorry...
             </p>
             <div class="grid">
                 <a title="Intro to VSCode" href="https://jeremt.github.io/intro-to-vscode" target="_blank">
