Fix some accessibility issues ♿️

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="description" content="Jeremie's web developer portolio" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>jeremtab</title>
         <link rel="stylesheet" href="index.css" />
@@ -23,14 +24,16 @@
             <p>The main projects I'm currently working on these days</p>
             <div class="grid">
                 <div class="project">
-                    <a href="https://voltapp.tech" target="_blank"><img src="./assets/voltapp.png" alt="" /></a>
+                    <a href="https://voltapp.tech" target="_blank" aria-label="Voltapp"
+                        ><img src="./assets/voltapp.png" alt=""
+                    /></a>
                     <p>
                         Voltapp is a no-code tool to create web apps using a graph based visual coding. This is my main
                         project as a Co-founder of Celestory company.
                     </p>
                 </div>
                 <div class="project">
-                    <a href="https://codepassport.dev" target="_blank"
+                    <a href="https://codepassport.dev" target="_blank" aria-label="CodePassport"
                         ><img src="./assets/codepassport.png" alt=""
                     /></a>
                     <p>
