Start adding slides directly in the main site.

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                 french, sorry...
             </p>
             <div class="grid">
-                <a title="Intro to VSCode" href="https://jeremt.github.io/intro-to-vscode" target="_blank">
+                <a title="Intro to VSCode" href="/slides/vscode.html">
                     <img src="assets/slides-vscode.png" alt="Intro to VSCode" />
                 </a>
-                <a title="Intro to GIT" href="https://jeremt.github.io/intro-to-git" target="_blank">
+                <a title="Intro to GIT" href="/slides/git.html">
                     <img src="assets/slides-git.png" alt="Intro to GIT" />
                 </a>
                 <a title="Intro to async" href="https://jeremt.github.io/intro-to-async" target="_blank">
                     <img src="assets/slides-async.png" alt="Intro to async" />
                 </a>
-                <a title="Intro to React" href="https://jeremt.github.io/intro-to-react" target="_blank">
+                <a title="Intro to React" href="/slides/react.html">
                     <img src="assets/slides-react.png" alt="Intro to React" />
                 </a>
                 <a title="Intro to Debug" href="https://jeremt.github.io/intro-to-debug" target="_blank">
