New look agan 🙄

--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
         <main id="intro">
             <img src="assets/avatar.jpg" alt="me" />
             <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
-            <p>
-                Just a random guy in Paris who writes code sometimes<br />
-                and start new side projects every now and then.
-            </p>
-            <a href="#projects" class="linkBtn">More stuff 👇</a>
+            <p class="subtitle">I write or teach code sometimes</p>
+            <a href="#projects" class="linkBtn">Random stuff I do <span>👇</span></a>
         </main>
         <section id="projects">
-            <h2>What do I do?</h2>
-            <p>The main projects I'm currently working on these days</p>
+            <h2>Recent projects (kind of)</h2>
             <div class="grid">
                 <div class="project">
                     <a href="https://voltapp.tech" target="_blank" aria-label="Voltapp"
@@ -42,14 +38,21 @@
                         <a href="https://www.instagram.com/vi_pariscandance/" target="_blank">Vi</a>.
                     </p>
                 </div>
+                <div class="project">
+                    <a href="https://ttmc-ui.vercel.app/" target="_blank" aria-label="CodePassport"
+                        ><img src="./assets/ttmc.png" alt=""
+                    /></a>
+                    <p>
+                        Open-source board game inspired by the french board game
+                        <a href="https://tutemetscombien.fr/" target="_blank">ttmc</a>
+                        repurposed to learn dev/tech concepts. Add your own cards
+                        <a href="https://github.com/jeremt/ttmc-for-dev" target="_blank">here</a>.
+                    </p>
+                </div>
             </div>
         </section>
         <section id="slides">
             <h2>Slides for workshops</h2>
-            <p>
-                Theses slides are meant to be used as a support for teaching the associated concepts, also it's in
-                french, sorry...
-            </p>
             <div class="grid">
                 <a title="Intro to VSCode" href="/slides/vscode.html">
                     <img src="assets/slides-vscode.png" alt="Intro to VSCode" />
@@ -73,7 +76,7 @@
                     <img src="assets/slides-poo.png" alt="Intro to POO" />
                 </a>
             </div>
-            <a href="#intro" class="linkBtn">Back to top 👆</a>
+            <a href="#intro" class="linkBtn">Back to top <span>👆</span></a>
         </section>
         <footer>
             <a target="_blank" style="--footer-index: 0" title="Github" href="https://github.com/jeremt">
@@ -88,7 +91,7 @@
                 target="_blank"
                 style="--footer-index: 1"
                 title="LinkedIn"
-                href="https://www.linkedin.com/in/jeremie-taboada-16495959/"
+                href="https://www.linkedin.com/in/jeremie-taboada/"
             >
                 <svg width="32" height="30" viewBox="0 0 32 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
