Update link for Vi + resume

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="https://codepassport.dev" target="_blank" aria-label="CodePassport"><img src="./assets/codepassport.png" alt="" /></a>
                     <p>
                         Code Passport is an interactive website to learn code (JS, HTML & CSS). I'm developping it on my spare time with my friend
-                        <a href="https://www.instagram.com/vi_pariscandance/" target="_blank">Vi</a>.
+                        <a href="https://xvt.vercel.app/" target="_blank">Vi</a>.
                     </p>
                 </div>
                 <div class="project">
